--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div id="syncstatus">Sync Status</div></p>
     </footer>
     <!-- pouchdb -->
-    <script src="jspouchdb.min.js"></script>
+    <script src="js/pouchdb-7.2.1.min.js"></script>
     <!-- medium-editor -->
     <script src="js/base.js"></script>
     <script src="js/app.js"></script>
