--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             </div>
             <button class="editthecomment libutton" type="button">Edit</button>
             <div class="printCard">
-                <div class=rowCard></div>
+                <div class=rowCard>
                     <div><img class="qrCard"></div><div><img class="photoCard"></div>
                 </div>
-                <div class=rowCard></div>
+                <div class=rowCard>
                     <div><table>
                         <tr><td>Patient name</td><td></td></tr>
                         <tr><td>Complaints</td><td></td></tr>
