--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class=rowCard>
                     <div><table>
-                        <tr><td>Patient name</td><td></td></tr>
+                        <tr><td>Patient name</td><td>blah blah blblblah</td></tr>
                         <tr><td>Complaints</td><td></td></tr>
                         <tr><td>Procedure</td><td></td></tr>
                         <tr><td>Length</td><td></td></tr>
