--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <div id="headerbox">
                 <h1>Mission<br>Database</h1>
+                <canvas id="testqr" height=256 width=256></canvas>
                 <div id="buttonheader">
                     <div class="PatientList pageOverlay">
                         <button type="button" class="divbutton" onclick="newPatient()">Add Patient</button>
@@ -97,7 +98,7 @@
             <button class="editthecomment libutton" type="button">Edit</button>
             <div class="printCard">
                 <div class=rowCard>
-                    <div><img class="qrCard"></div><div><img class="photoCard"></div>
+                    <div><canvas class="qrCard" height=256 width=256></div><div><img class="photoCard"></div>
                 </div>
                 <div class=rowCard>
                     <div><table>
@@ -128,6 +129,8 @@
         </footer>
         <!-- pouchdb -->
         <script src="js/pouchdb-7.2.1.min.js"></script>
+        <!-- qr -->
+        <script src=js/qrenc-4.0.0.min.js></script>
         <!-- medium-editor -->
         <script src="js/base.js"></script>
         <script src="js/app.js"></script>
